POS-002: Complete housekeeping - smoke test, regression test, ticket docs
- Added POS-002 ticket documentation with smoke test results
- Created regression test for UnrealizedPnLCalculator filtering bug
- Updated PRC-001 ticket as next priority
- Smoke test results: 34zYD... → 18 positions, AAXT... → 63 positions

--- a/tickets/PRC-001.md
+++ b/tickets/PRC-001.md
@@ -1,20 +1,26 @@
-# PRC-001: Re-enable Helius-only pricing
+# PRC-001: Helius-only pricing for positions endpoint
 
-**Priority**: P2  
-**Owner**: TBD  
-**Created**: 2025-01-02  
-**Blocks**: v0.8.0-prices  
+## Status: READY FOR DEVELOPMENT 🚀
 
-## Goal
-Restore current price data to both trades and positions endpoints using only Helius API, eliminating Birdeye dependency and simplifying the pricing pipeline.
+### Description
+Wire up current price data (current_price_usd) in the positions endpoint so GPT prompts can discuss dollar values. Currently positions return with pricing fields as zero/null.
 
-## Acceptance Criteria
-- [ ] `/v4/trades/export-gpt/{wallet}` includes `current_price_usd` field in trade objects
-- [ ] `/v4/positions/export-gpt/{wallet}` includes `current_price_usd` in position objects  
-- [ ] Cold response time <8 seconds for test wallet (34zYDgjy...)
-- [ ] Warm response time <1 second for cached positions
-- [ ] No Birdeye API calls made (`PRICE_HELIUS_ONLY=true` enforced)
-- [ ] Price confidence levels working: `high`, `est`, `stale`
+### Prerequisites 
+- ✅ POS-001: Position builder working (demo wallet returns ≥1 position)
+- ✅ POS-002: Production endpoint fixed (positions pipeline working end-to-end)
+
+### Goal
+Enable production `/v4/positions/export-gpt/{wallet}` to return meaningful current_price_usd values using Helius price extraction instead of zeros.
+
+### Acceptance Criteria
+- Demo wallet positions show current_price_usd > 0 for major tokens
+- price_confidence reflects data quality (HIGH for recent swaps, ESTIMATED for older)
+- Pricing doesn't significantly impact response times (<5s total)
+
+### Next Steps
+1. Analyze existing Helius price extraction logic
+2. Ensure integration with production pricing flow  
+3. Test with demo wallets for price accuracy
 
 ## Out of Scope
 - Redis caching optimization (separate ticket CCH-001)
