chore: Pivot to trades-based insights (Option B)
- Disable POSITIONS_ENABLED and UNREALIZED_PNL_ENABLED in production
- Mark positions endpoint as BETA/experimental in docs
- Create POS-003 ticket to track positions accuracy issues
- Create GPT-004 ticket for trade-based insights focus
- Update OpenAPI spec to warn about positions limitations

Decision: Focus on stable trades endpoint for immediate GPT value
while deferring complex positions debugging.

--- a/tickets/GPT-004.md
+++ b/tickets/GPT-004.md
@@ -96,3 +96,104 @@ const analysis = await openai.complete(prompt);
 - [ ] Add multi-wallet comparison templates
 - [ ] Create templates for positions endpoint
 - [ ] Build template testing framework
+
+# GPT-004: Trade-Based Insights for ChatGPT
+
+## Status: TODO 🎯
+
+### Context
+With positions endpoint accuracy issues (POS-003), we're pivoting to leverage the stable trades endpoint for immediate GPT value.
+
+### Goal
+Build 2-3 compelling "insight recipes" that ChatGPT can generate from trade history alone.
+
+### Insight Templates to Build
+
+#### 1. Trading Performance Analysis
+```
+Based on your {N} trades:
+- Win Rate: {X}% ({wins}/{total} profitable trades)
+- Average Win: +${avg_win} ({avg_win_pct}%)
+- Average Loss: -${avg_loss} ({avg_loss_pct}%)
+- Profit Factor: {total_wins/total_losses}
+- Best Trade: {token} +${amount} ({pct}%)
+- Worst Trade: {token} -${amount} ({pct}%)
+```
+
+#### 2. Trading Behavior Patterns
+```
+Your trading style:
+- Most Active Hours: {time_distribution}
+- Favorite Tokens: {top_5_by_volume}
+- Average Hold Time: {duration}
+- DEX Preference: {dex_breakdown}
+- Trading Frequency: {trades_per_week}
+- Position Sizing: ${avg_position_size}
+```
+
+#### 3. Token Performance Breakdown
+```
+Performance by token:
+{for each token}:
+  - {TOKEN}: {trades} trades, {win_rate}% win rate
+    Total P&L: ${total_pnl} ({pnl_pct}%)
+    Best: +${best} | Worst: -${worst}
+```
+
+### Implementation Plan
+
+1. **Create Analysis Functions** (`src/lib/trade_insights.py`)
+   - `calculate_win_rate(trades)`
+   - `analyze_time_patterns(trades)`
+   - `token_performance_summary(trades)`
+   - `calculate_profit_factors(trades)`
+
+2. **Add GPT Prompt Templates** (`docs/gpt_prompts/trade_insights.md`)
+   - Markdown templates with placeholders
+   - Example outputs for testing
+   - Variations for different trader types
+
+3. **Create Demo Script** (`scripts/demo_trade_insights.py`)
+   - Test with demo wallets
+   - Generate sample insights
+   - Validate calculations
+
+### Example Code Structure
+
+```python
+class TradeInsights:
+    def __init__(self, trades: List[Trade]):
+        self.trades = trades
+        
+    def calculate_win_rate(self) -> WinRateStats:
+        wins = [t for t in self.trades if t.pnl_usd > 0]
+        return WinRateStats(
+            total_trades=len(self.trades),
+            winning_trades=len(wins),
+            win_rate=len(wins) / len(self.trades) * 100,
+            avg_win=sum(t.pnl_usd for t in wins) / len(wins),
+            avg_loss=...
+        )
+    
+    def generate_summary(self) -> str:
+        """Generate markdown summary for GPT"""
+        stats = self.calculate_win_rate()
+        return PERFORMANCE_TEMPLATE.format(**stats.dict())
+```
+
+### Success Criteria
+- [ ] 3 working insight templates
+- [ ] Accurate calculations verified against test data
+- [ ] < 1s generation time for typical wallets
+- [ ] Markdown output ready for ChatGPT
+- [ ] Demo showing real wallet insights
+
+### Test Wallets
+- Small: `34zYDgjy8oinZ5y8gyrcQktzUmSfFLJztTSq5xLUVCya` (1,100 trades)
+- Medium: `AAXTYrQR6CHDGhJYz4uSgJ6dq7JTySTR6WyAq8QKZnF8` (2,300 trades)
+
+### Notes
+- Trades endpoint is stable and fast
+- All calculations based on `pnl_usd` field
+- Focus on actionable insights, not just data dumps
+- Keep language trader-friendly and conversational
