chore: Update GPT-004 status to In Progress

--- a/tickets/GPT-004.md
+++ b/tickets/GPT-004.md
@@ -97,9 +97,9 @@ const analysis = await openai.complete(prompt);
 - [ ] Create templates for positions endpoint
 - [ ] Build template testing framework
 
-# GPT-004: Trade-Based Insights for ChatGPT
+# GPT-004: Build Trade-Based Insights for ChatGPT
 
-## Status: TODO 🎯
+## Status: In Progress 🚧
 
 ### Context
 With positions endpoint accuracy issues (POS-003), we're pivoting to leverage the stable trades endpoint for immediate GPT value.
