docs: Update TRD-002 status to DONE

--- a/tickets/TRD-002.md
+++ b/tickets/TRD-002.md
@@ -1,6 +1,26 @@
 # TRD-002: Add Price and Value Fields to Trades Export
 
-## Status: TODO 🚨
+## Status: DONE ✅
+
+### Implementation Details
+
+**Branch**: `feature/trd-002-trade-value`  
+**PR**: Ready for review
+
+**Files Added/Modified**:
+- `src/lib/trade_enricher.py` - Core enrichment logic with FIFO P&L
+- `src/api/wallet_analytics_api_v4_gpt.py` - Endpoint integration
+- `src/config/feature_flags.py` - PRICE_ENRICH_TRADES flag
+- `tests/test_trade_enricher.py` - Comprehensive unit tests
+- `tests/ci_trade_enrichment.py` - CI coverage test (90% threshold)
+- `schemas/trades_export_v0.7.1_openapi.json` - API documentation
+- `scripts/test_trd_002.py` - Demo script
+
+### Deployment Steps
+
+1. Merge PR `feature/trd-002-trade-value`
+2. Set `PRICE_ENRICH_TRADES=true` in Railway
+3. Test with `?schema_version=v0.7.1-trades-value`
 
 ### Context
 The `/v4/trades/export-gpt` endpoint currently returns null/zero for critical pricing fields, making P&L analysis impossible:
